Reverted changes in SystemConfigBootstrapModel.java